# default_prediction_case_study

./: .dockerignore  .gitignore  0_build_project_tree.py  1_run_project.py  Dockerfile  README.md  build_and_run_project.py  build_project_tree.py  pyproject.toml  requirements.txt
api/: app.py  pyproject.toml  zappa_settings.json
api/_aux/: features.py
src/0_split_data/: split_train_validation_test.ipynb
src/1_sanity/: basic_profile.ipynb
src/2_exploration/: 0_EXPLORATION_README.md  1_personal_variables.ipynb  2_status_variables.ipynb  3_account_variables.ipynb  4_archieved_variables.ipynb  5_order_variables.ipynb  statistical_divergence.ipynb
src/3_feature_engineering/: 1_create_features.ipynb  1_define_preprocessors.ipynb  2_transform_data.ipynb
src/3_feature_engineering/_aux/: features.py
src/4_baseline_model/: 1_train_and_score.ipynb
src/5_tuned_model/: 1_handle_imbalance.ipynb  1_handle_imbalance.py  2_select_hyperparams_and_models.ipynb
src/5_tuned_model/_aux/: ml.py
src/6_results/: 1_train_and_score.ipynb
src/_aux/: functions.py
