[tool.poetry]
name = "klarna_case_study"
version = "0.1.0"
description = "Solution for the case study"
authors = ["Otto von Sperling <otto@vonsperling.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
xgboost = "^1.4.2"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
jupytext = "^1.11.2"
pylint = "^2.8.2"
isort = "^5.8.0"
pandas-profiling = "^3.0.0"
plotly = "^4.14.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
