[tool.poetry]
name = "default_case_study"
version = "0.1.0"
description = "Solution for the case study"
authors = ["Otto von Sperling <otto@vonsperling.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
Flask = "1.1.4"
Werkzeug = "0.16.1"
zappa = "^0.52.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
